Fixed reset button being out of bounds

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 
 #game {
     width: 800px;
-    height: 100%;
+    height: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,6 +34,7 @@ body {
     background-color: beige;
     border-radius: 8px;
     border: 20px solid rgb(126, 126, 126);
+    margin-bottom: 20px;
 }
 .cell {
     text-align: center;
@@ -54,13 +55,15 @@ body {
 #playerNames {
     width: 800px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 #playerNames > div > input { 
     border-radius: 5px;
     border: 1px solid gray;
     height: 1.5em;
+    width: 250px;
+    text-align: center;
 }
 
 button {
